<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Run Club</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_heading">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Re-enter Password</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="already_joined">Already registered?</string>
    <string name="register_button">Register</string>
    <string name="signIn_button">Sign In</string>
    <string name="infinity">Project Infinity</string>

</resources>
